<resources>
    <string name="app_name">Organizer</string>
    <string name="db_name">RestClient.db</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="address">ADDRESSES</string>
    <string name="alarm">ALARMS</string>
    <string name="note">NOTES</string>

    <string name="note_title">Title</string>
    <string name="actual_address">CURRENT</string>

    <string name="note_alert_dialog_title">Enter new title</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_delete_note">Are you sure you want to delete this note?</string>
    <string name="dialog_delete_note_title">Delete note</string>
    <string name="dialog_delete_address">Are you sure you want to delete this address?</string>
    <string name="dialog_delete_address_title">Delete address</string>
    <string name="dialog_delete_alarm">Are you sure you want to delete this alarm?</string>
    <string name="dialog_delete_alarm_title">Delete alarm</string>

    <string name="address_alert_dialog_name">Enter new name</string>

    <string name="address_error">Incorrect address!</string>
    <string name="address_no_gps">Turn on GPS provider!</string>
    <string name="address_cannot_find">Cannot find current address</string>
    <string name="no_internet">No Internet connection</string>
    <string name="address_set_address_name">Set address name</string>
    <string name="note_set_note_name">Set note name</string>

    <string name="address_name">Current location</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>

    <string name="alarm_list_hour">Hour</string>

    <string name="alarm_set_on">Alarm has been set on: </string>
    <string name="alarm_cancelled">Alarm has been cancelled</string>
    <string name="alarm_turn_off">Turn off an Alarm!</string>
    <string name="alarm_click_me">Click me!</string>

    <string-array name="ringtones">
        <item>Alarm</item>
        <item>Apple Ring</item>
        <item>Best Wake Up Sound</item>
        <item>Car Lock</item>
        <item>Extreme Alarm Clock</item>
        <item>Morning Alarm</item>
        <item>Real Loud Alarm</item>
        <item>Russian Electro</item>
        <item>Siren</item>
        <item>Voo Voo SMS</item>
    </string-array>

    <string name="msg_pick_ringtone">Please pick a ringtone</string>

    <string name="address_stats_times_viewed">Viewed on map: </string>
    <string name="address_stats_distance">Distance from current location: </string>
    <string name="address_stats_date_created">Date created: </string>
    <string name="address_stats_kilometers"> km</string>

    <string name="note_stats_char_counter">Character used: </string>
    <string name="note_stats_date_created">Date created: </string>
    <string name="note_stats_last_updated">Last updated: </string>

    <string name="alarm_stats_times_called">Called counter: </string>
    <string name="alarm_stats_last_used">Last used: </string>
    <string name="alarm_stats_avarage_time_play">Average play time: </string>
    <string name="alarm_stats_sec"> s</string>

</resources>
