<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pawe.organizer.flow.activities.AlarmStatsActivity">

    <RelativeLayout
        android:id="@+id/alarm_stats_rl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/edittext_padding">
        <TextView
            android:id="@+id/alarm_stats_timesCalled_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_stats_times_called"/>
        <TextView
            android:id="@+id/alarm_stats_timesCalled_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/alarm_stats_timesCalled_label"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/alarm_stats_rl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/alarm_stats_rl1"
        android:layout_margin="@dimen/edittext_padding">
        <TextView
            android:id="@+id/alarm_stats_last_used_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_stats_last_used"/>
        <TextView
            android:id="@+id/alarm_stats_last_used_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/alarm_stats_last_used_label"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/alarm_stats_rl2"
        android:layout_margin="@dimen/edittext_padding">
        <TextView
            android:id="@+id/alarm_stats_average_time_play_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_stats_avarage_time_play"/>
        <TextView
            android:id="@+id/alarm_stats_average_time_play_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/alarm_stats_average_time_play_label"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_stats_sec"
            android:layout_toRightOf="@+id/alarm_stats_average_time_play_tv"/>
    </RelativeLayout>
</RelativeLayout>
