<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pawe.organizer.flow.activities.NoteStatsActivity">
    <RelativeLayout
        android:id="@+id/note_stats_rl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/edittext_padding">
        <TextView
            android:id="@+id/note_stats_CharCounter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_stats_char_counter"/>
        <TextView
            android:id="@+id/note_stats_char_counter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/note_stats_CharCounter_label"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/note_stats_rl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/note_stats_rl1"
        android:layout_margin="@dimen/edittext_padding">
        <TextView
            android:id="@+id/note_stats_date_created_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_stats_date_created"/>
        <TextView
            android:id="@+id/note_stats_date_created_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/note_stats_date_created_label"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/note_stats_rl2"
        android:layout_margin="@dimen/edittext_padding">
        <TextView
            android:id="@+id/note_stats_last_updated_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_stats_last_updated"/>
        <TextView
            android:id="@+id/note_stats_last_updated_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/note_stats_last_updated_label"
            android:textStyle="bold"/>
    </RelativeLayout>
</RelativeLayout>
